test/org/midica/testfiles/failing/eff-flow-non-generic-with-num.midica
INCLUDE inc/instruments.midica


0: vol=30.set(50)
